<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/phone_account_tx"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:text="@string/phone_account"
        android:textColor="@color/text_grey"
        android:textSize="14sp" />

    <View
        android:id="@+id/first_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/phone_account_tx"
        android:layout_marginLeft="24dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/first_line"
        android:layout_marginLeft="24dp"
        android:gravity="center_vertical"
        android:text="@string/login_txt"
        android:textColor="@color/text_black"
        android:textSize="16sp" />

    <com.letv.accountoathsdk.widget.SwipeMenuListView
        android:id="@+id/phone_account_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_txt"
        android:layout_marginLeft="24dp" />

    <View
        android:id="@+id/third_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/phone_account_list"
        android:layout_marginLeft="24dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/other_account_tx"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/third_line"
        android:layout_marginLeft="24dp"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:text="@string/other_account"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        android:visibility="gone" />

    <View
        android:id="@+id/second_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/other_account_tx"
        android:layout_marginLeft="24dp"
        android:background="@color/line_color" />

    <com.letv.accountoathsdk.widget.SwipeMenuListView
        android:id="@+id/other_account_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_line"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/login_other_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@id/other_account_list"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_pressed_shape_blue"
        android:gravity="center"
        android:text="@string/login_other_account"
        android:textColor="@color/text_color_white"
        android:textSize="18sp" />

</RelativeLayout>